# NepalEntityService

./: .dockerignore  .env.example  .gitmodules  DATABASE_SETUP.md  Dockerfile  README.md  USAGE_EXAMPLES.md  pyproject.toml
.github/workflows/: README.md  ci.yml  migration-persistence.yml  migration-preview.yml
docs/: index.md  migration-architecture.md  migration-contributor-guide.md  migration-maintainer-guide.md
docs/contributors/: migration-contributor-guide.md
examples/: migration_manager_demo.py
migrations/: README.md
migrations/000-example-migration/: README.md  migrate.py
migrations/001-source-locations/: migrate.py
migrations/002-ward-name-fix/: README.md  migrate.py
migrations/003-source-2082-political-parties/: README.md  generate_translations.py  migrate.py
migrations/007-redact-family-info/: README.md  migrate.py
migrations/007-source-projects/: README.md  migrate.py
migrations/010-source-2082-direct-candidates/: README.md  generate_translations.py  migrate.py  notes.md
nes/: __init__.py  cli.py
nes/api/: __init__.py  app.py  server.py
nes/core/: constraints.py
nes/database/: entity_database.py  file_database.py  in_memory_cached_read_database.py
nes/scraping/: __init__.py  wikipedia_nepali_politicians.py
nes2/: config.py
nes2/cli/: __init__.py  migrate.py
nes2/services/: __init__.py
tests/api/: test_api_endpoints.py
tests/database/: test_entity_database.py  test_file_database_entity.py  test_file_database_relationship.py
tests/end_to_end/: test_entity_mgmt_example.py
tests2/: test_config_database_url.py
(+58 files in other folders)
